--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
+<!--{{ url_for('static',filename='styles/indexStyles.css') }}-->
+<!--C:\Users\trexx\Documents\PYTHON CODE LOL\PersonalWebsite\Personal-platypus-website\code\static\styles\indexStyles.css -->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>SCP-16-Tsundere</title>
+        <title>Sentient Platypus</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "C:\Users\trexx\Documents\PYTHON CODE LOL\PersonalWebsite\Personal-platypus-website\code\static\styles\indexStyles.css">
     </head>
     <body>
+        <div id="banner">
+            <header>
+                <a href="./intex.html" class="logo">
+                    <img class = "logo" src = "{{ url_for('static',filename='pfp.jpg') }}" alt="logo" width="100" height="80">
+                </a>
+                <nav>
+                    <ul class="nav_links" id="nav_links">
+                        <li><a href="#">About me</a></li>
+                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact me</a></li>
+                        <li><a href="#">Projects</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <div id="intro">
+                <div id="text">
+                    <h1>Hi, <br> Im SentientPlatypus, <br> Developer.</h1>
+                    <p>Full Stack Dev | Enthusiast | Visionary</p>
+                </div>
+                <img src="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024" alt="me">
+            </div>
+
+            <div id="aboutme">
+                <h1>
+                    Since the february of <span id="makeGold">2021</span>, <br> I have been a Computer Science <span id="makeGold">Enthusiast</span>.
+                </h1>
+                <h1>
+                    I have worked on <span id="makeGold">several projects</span> and have experience <span id="makeGold">collaborating</span> with fellow developers.
+                </h1>
+                <h1>
+                    Join me sometime?
+                </h1>
+                <a href="#"><button>Contact me</button></a>
+            </div>
 
 
+
+
+
+
+
+
+        </div>
 
 
 
