--- a/code/static/styles/productsStyles.css
+++ b/code/static/styles/productsStyles.css
@@ -29,6 +29,11 @@ h1 {
 }
 
 
+
+
+#makeGold {
+    color: gold;
+}
 /*banner*/
     #banner {
         background-image: url("https://wallpaperaccess.com/full/2439754.jpg");
@@ -71,73 +76,6 @@ h1 {
         color: gold;
     }
 
-/* intro */
-    #intro{
-
-        margin: auto;
-        margin-top: 100px;
-        margin-bottom: 300px;
-        width: 70%;
-    }
-    #main{
-        display: flex;
-        justify-content: space-between;
-    }
-
-    #main img {
-        max-width: 400px;
-        max-height: 400px;
-        border-radius: 30px;
-        padding: 10px;
-    }
-
-
-/*about*/
-    #aboutme {
-        margin-top: 0px;
-        margin: auto;
-        width: 70%;
-        padding-bottom: 500px;
-    }    
-
-    #aboutme h1 {
-        margin-top: 200px;
-        display: inline-block;
-    }
-
-    #aboutme a h1 {
-        margin-top: 0px;
-        margin-bottom: 0px;
-        border-bottom: 3px solid gold;
-        transition: 0.4s ease;
-    }
-
-    #aboutme #makeGoldandButton:hover{
-        border-bottom: 3px solid white;
-        color: white;
-    }
-
-    #aboutme #makeGoldandButton {
-        color: gold;
-        transition: 0.4s ease;
-    }
-
-    #aboutme #makeGold {
-        color: gold;
-        transition: 0.4s ease;
-    }
-
-    #aboutme button {
-        padding: 20px 50px;
-        background-color: transparent;
-        border: 3px solid white;
-        transition: all 0.5s ease 0s;
-    }
-    #aboutme button:hover {
-        background-color: transparent;
-        border: 3px solid gold;
-        transition: all 0.5s ease 0s;
-    }
 
     /*dropdown*/
     .dropbtn {
@@ -205,81 +143,163 @@ h1 {
       border: 2px gold solid;
     }
 
-    /* SOCIAL ICONS*/
-    .social-icons {
-        position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin-top: 0px;
-        width: 100%;
-        display: flex;
-    }
 
-    .social-icons a{
-        position: relative;
-        display: inline-block;
-        margin-left: 10px;
-        width: 60px;
-        height: 60px;
-        cursor: pointer;
-        margin: 0 5;
-        text-align: center;
-        line-height: 60px;
-        transition: 0.5s ;
-        transform-style: preserve-3d;
 
-    }
+/*product section*/
+.ProductPageTitle {
+  margin: auto;
+  width: 70%;
+  margin-bottom: 200px;
+}
 
-    .social-icons .front {
-        width: 60px;
-        height: 60px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translateZ(35px);
-        backface-visibility: visible;
-        font-size: 20px;
-        border-radius: 6px;
-    }
+.product {
+    backdrop-filter: blur(7px);
+    border: 3px solid gold;
+    margin-top: 0px;
+    margin: auto;
+    width: 70%;
+    padding-bottom: 50px;
+    margin-bottom: 300px;
+    border-radius: 30px;
+}    
 
-    .social-icons .back {
+.product .productHead{
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
-        transform: rotateX(90deg) translateZ(40px);
-        backface-visibility: hidden;
-        background: #fff;
-        border-radius: 8px;
-    }
+.productHead img {
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 30px;
+    padding: 10px;
+}
 
-    .social-icons .front i {
-        color: #fff;
-        font-size: 25px;
-    }
+.productHead {
+    display: flex;
+}
 
-    .social-icons a:hover{
-        transform: rotateX(-90deg);
+#mainProductButton h1 {
+    border-bottom: 2px solid gold;
+    background-color: transparent;
+    color: white;
+    padding: 10px, 50%;
+    transition: 0.5s ease;
+}
+#mainProductButton h1:hover {
+    border-bottom: 2px solid gold;
+    color: gold;
+    padding: 10px, 50%;
+}
 
-    }
 
-    .social-icons a:hover .back{
-        backface-visibility: visible;
-        
-    }
 
-    .social-icons .back i {
-        color: #000;
-        font-size: 25px;
-    }
+/* Slideshow container */
+.slideshow-container, .slideshow-container1 {
+    border-radius: 15px;
+    margin: 0px 24%;
+    width: 50%;
+    height: 20%;
+    position: relative;
+    display: inline-block;
 
-    .social-icons a.instagram .front{
-        background: #f46f30;
-    }
-    .social-icons a.github .front{
-        background: #171515;
-    }
-    .social-icons a.discord .front{
-        background: #7289da;
-    }
-    .social-icons a.gmail .front{
-        background: #bb001b;
-    }
+  }
+
+.slideshow-container img, .slideshow-container1 img {
+    border-radius: 15px;
+    max-width: 100%;
+    max-height: 50%;
+}
+  /* Hide the images by default */
+  .mySlides, .mySlides1 {
+    display: flex;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next , .prev1, .next1{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next, .next1 {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover , .next1:hover, .prev1:hover{
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text, .text1 {
+    color: #f2f2f2;
+    background-color: #24252A;
+    font-size: 15px;
+    backdrop-filter: blur(100%);
+
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext, .numbertext1 {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot, .dot1 {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: gold;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover, .active1, .dot1:hover {
+    background-color: #ffffff;
+  }
+  
+  /* Fading animation */
+  .fade, .fade1 {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+
+
+
+  .secondarybutton 
+  {
+    color: white;
+    border-bottom: gold 2px solid;
+  }
+
+  .secondarybutton:hover 
+  {
+    color: gold;
+    border-bottom: gold 2px solid;
+  }
