--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -49,7 +49,7 @@
 
                 </div> 
                 <div class="social-icons">
-                    <a href="#" class="instagram">
+                    <a href="https://www.instagram.com/genius_ta/" class="instagram">
                         <div class="front"><i class="fab fa-instagram" aria-hidden="true"></i></div>  
                         <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div>  
                     </a>
