--- a/code/services/templates/products.html
+++ b/code/services/templates/products.html
@@ -52,7 +52,7 @@
                         <a href="https://scp16tsundere.pagekite.me/" id="mainProductButton"><h1>Amoris</h1></a>
                         <h1>The bot your server<br><span id="makeGold">needs</span>.</h1>
                         <p>SCP is a one of a kind multipurpose bot. It provides fully customizable moderation and utility along with image generation, fun commands, Levels, a fully functional economy system, a duels system, and a Girlfriend Simulator
-                            all in one package. </p>
+                            all in one package. (above link may not work, I only host the site when I have access to my computer.)</p>
                             <a class="secondarybutton" href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot">Invite Amoris to your discord server!</a>
                     </div>
                     <img src="https://cdn.discordapp.com/avatars/822265614244511754/61cdc288c07c18e83082e538e5ca6671.webp?size=1024" alt="me">
