--- a/code/services/templates/projects.html
+++ b/code/services/templates/projects.html
@@ -38,113 +38,44 @@
                                 </div>
                             </div>
                         </li>
+
+
                     </ul>
                 </nav>
             </header>
 
             <div class="ProductPageTitle">
                 <h1>
-                    My Products
+                    My Projects
                 </h1>
                 <p>
-                    Larger projects that users can take advantage of in a few clicks.   
+                    Basic projects that actually had a decent time investment.  
                 </p>
             </div>
             
-            <div class="product" id="scp">
+            <div class="product" id="airPlaneSeater">
                 <div class="productHead">
                     <div id="text">
-                        <a href="https://scp16tsundere.pagekite.me/" id="mainProductButton"><h1>Amoris</h1></a>
-                        <h1>The bot your server<br><span id="makeGold">needs</span>.</h1>
-                        <p>SCP is a one of a kind multipurpose bot. It provides fully customizable moderation and utility along with image generation, fun commands, Levels, a fully functional economy system, a duels system, and a Girlfriend Simulator
-                            all in one package. (above link may not work, I only host the site when I have access to my computer.)</p>
-                            <a class="secondarybutton" href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot">Invite Amoris to your discord server!</a>
+                        <a href="https://github.com/CompsiGroup/AirplaneProject/tree/main" id="mainProductButton"><h1>Airplane Seating Simulator</h1></a>
+                        <h1>You know you have always wanted to do it</h1>
+                        <p>Just a project that simulates seating of an airplane. GUI or Terminal versions are available according to the branch.</p>
                     </div>
-                    <img src="https://cdn.discordapp.com/avatars/822265614244511754/61cdc288c07c18e83082e538e5ca6671.webp?size=1024" alt="me">
-                </div>
-                <div class="slideshow-container1" id="updates">
-                    <!-- Full-width images with number and caption text -->
-        
-                    <div class="mySlides1 fade1">
-                    <div class="numbertext1">1 / 3</div>
-                    <img src="https://images8.alphacoders.com/117/1173360.png" style="width:100%">
-                    <div class="text1">multipurpose bot.</div>
-                    </div>
-        
-                    <div class="mySlides1 fade1">
-                    <div class="numbertext1">2 / 3</div>
-                    <img src="https://i.pinimg.com/originals/ba/f5/ca/baf5ca019c992f780d88d7d6a32edce5.jpg" style="width:100%">
-                    <div class="text1">Fully customizable Girlfriend simulator</div>
-                    </div>
-                
-                    <div class="mySlides1 fade1">
-                    <div class="numbertext1">3 / 3</div>
-                    <img src="https://img2.goodfon.com/wallpaper/nbig/e/ef/art-dawn-kantai-collection.jpg" style="width:100%">
-                    <div class="text1">New dashboard to customize server settings!</div>
-                    </div>
-            
-                
-                    <!-- Next and previous buttons -->
-                    <a class="prev1" onclick="plusSlides1(-1)">&#10094;</a>
-                    <a class="next1" onclick="plusSlides1(1)">&#10095;</a>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/SSJ100_for_Interjet_-_Interiors_%289016257074%29.jpg/1200px-SSJ100_for_Interjet_-_Interiors_%289016257074%29.jpg" alt="me">
                 </div>
                 <br>
-                
-                <!-- The dots/circles -->
-                <div style="text-align:center">
-                    <span class="dot1" onclick="currentSlide1(1)"></span>
-                    <span class="dot1" onclick="currentSlide1(2)"></span>
-                    <span class="dot1" onclick="currentSlide1(3)"></span>
-                </div>
-                
             </div>
 
-            <div class="product" id="lives">
+            <div class="product" id="sleeksnails">
                 <div class="productHead">
                     <div id="text">
-                        <a href="https://www.spigotmc.org/resources/lives-smp.96177/" id="mainProductButton"><h1>Lives SMP</h1></a>
-                        <h1>The Lives system that supports <br><span id="makeGold">lifesteal</span>.</h1>
-                        <p>Each life is priceless. Fight other players for lives! Easy-to-use UI and admin commands!</p>
+                        <a href="https://github.com/Sleek-Snails/Snail-Snacks" id="mainProductButton"><h1>Puzzles</h1></a>
+                        <h1>no rubiks cubes</h1>
+                        <p>Discordpy code jam project. a game with several puzzles and trivia.</p>
                     </div>
-                    <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="me">
-                </div>
-
-                <div class="slideshow-container" id="updates">
-                    <!-- Full-width images with number and caption text -->
-        
-                    <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="{{ url_for('static',filename='SMPlives.png') }}" style="width:100%">
-                    <div class="text">Exciting Lives system</div>
-                    </div>
-        
-                    <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="{{ url_for('static',filename='smpGUI.png') }}" style="width:100%">
-                    <div class="text">Easy to use GUI</div>
-                    </div>
-                
-                    <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="https://i.stack.imgur.com/7hRi4.jpg" style="width:100%">
-                    <div class="text">admin commands</div>
-                    </div>
-            
-                
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="me">
                 </div>
                 <br>
-                
-                <!-- The dots/circles -->
-                <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                </div>        
             </div>
-
 
 
 
