--- a/code/services/templates/underConstruction.html
+++ b/code/services/templates/underConstruction.html
@@ -29,7 +29,12 @@
                                     <a href="/products", id="account">
                                         <button>Products</button>
                                     </a>
-
+                                    <a href="/projects", id="account">
+                                        <button>Projects</button>
+                                    </a>
+                                    <a href="/inProgress", id="account">
+                                        <button> in Progress</button>
+                                    </a>
                                 </div>
                             </div>
                         </li>
