added Dev Team Projects

--- a/code/services/templates/inProgress.html
+++ b/code/services/templates/inProgress.html
@@ -75,7 +75,29 @@
                 <br>
             </div>
 
+            <div class="product" id="ihsGame">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Ithaca High School Platformer</h1></a>
+                        <h1>A CSGO map was too problematic</h1>
+                        <p>A platformer game based upon the Ithaca High School building!</p>
+                    </div>
+                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
+                </div>
+                <br>
+            </div>
 
+            <div class="product" id="ihsDevTeamBot">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>IHS Dev Team Helper</h1></a>
+                        <h1>Another discord bot</h1>
+                        <p>A bot to help out with club activities.</p>
+                    </div>
+                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
+                </div>
+                <br>
+            </div>
 
 
 
