--- a/code/services/templates/discord.html
+++ b/code/services/templates/discord.html
@@ -8,6 +8,8 @@
         <title>Sentient Platypus</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
+
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/discordStyles.css') }}">
     </head>
     <body>
