updated in progress and products

--- a/code/services/templates/inProgress.html
+++ b/code/services/templates/inProgress.html
@@ -77,6 +77,18 @@
                 <br>
             </div>
 
+            <div class="product" id="filter">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Computer Vision tools</h1></a>
+                        <h1>Cool opencv stuff</h1>
+                        <p>Hand detection projects, Pose detection, based on opencv and mediapipe</p>
+                    </div>
+                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
+                </div>
+                <br>
+            </div>
+
             <div class="product" id="ihsGame">
                 <div class="productHead">
                     <div id="text">
