--- a/code/services/templates/products.html
+++ b/code/services/templates/products.html
@@ -148,17 +148,16 @@
             </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
+            <div class="product" id="Calcom">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="https://www.pycalc.com/calcom" id="mainProductButton"><h1>Calcom</h1></a>
+                        <h1>Your solution to <br><span id="makeGold">Computation</span>.</h1>
+                        <p>One of the most efficient, scientific and trustworthy application services that PyCalc X provides is Calcom. The name "Calcom" is derived from 2 important branches of Mathematics: Calculus and Combinatorics. Calcom is a highly structured graphical calculator application that is compatible with Windows, Linux and MacOS. </p>
+                    </div>
+                    <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="me">
+                </div>
+            </div>
 
 
 
