--- a/code/services/templates/discord.html
+++ b/code/services/templates/discord.html
@@ -34,8 +34,11 @@
                                     <a href="/projects", id="account">
                                         <button>Projects</button>
                                     </a>
+                                    <a href="/papers", id="account">
+                                        <button>Papers</button>
+                                    </a>
                                     <a href="/inProgress", id="account">
-                                        <button> in Progress</button>
+                                        <button>in Progress</button>
                                     </a>
                                 </div>
                             </div>
