updated name and title, added ballcatcher and bozubot along with CRR visions 2022 to inProgress

--- a/code/services/templates/inProgress.html
+++ b/code/services/templates/inProgress.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sentient Platypus</title>
+        <title>Gene W</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
@@ -57,14 +57,15 @@
                 </p>
             </div>
             
-            <div class="product" id="CombatMod">
+
+            <div class="product" id="2022VIsions">
                 <div class="productHead">
                     <div id="text">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>CombatPlus</h1></a>
-                        <h1>Minecraft Combat just got better.</h1>
-                        <p>A forge mod with new items, and modified behavior of current tools including combos, and animations</p>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Robot Vision pipeline</h1></a>
+                        <h1>FRC 2022</h1>
+                        <p>literal basketball</p>
                     </div>
-                    <img src="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2021/02/Minecraft-Combat-Tips-7.jpg?q=50&fit=crop&w=1400&dpr=1.5" alt="me">
+                    <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="me">
                 </div>
                 <br>
             </div>
@@ -76,35 +77,23 @@
                         <h1>Cool opencv stuff</h1>
                         <p>Hand detection projects, Pose detection, based on opencv and mediapipe</p>
                     </div>
-                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/OpenCV_Logo_with_text_svg_version.svg/1200px-OpenCV_Logo_with_text_svg_version.svg.png" alt="me">
                 </div>
                 <br>
             </div>
 
-            <div class="product" id="ihsGame">
+
+            <div class="product" id="CombatMod">
                 <div class="productHead">
                     <div id="text">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>Ithaca High School Platformer</h1></a>
-                        <h1>A CSGO map was too problematic</h1>
-                        <p>A platformer game based upon the Ithaca High School building!</p>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>CombatPlus</h1></a>
+                        <h1>Minecraft Combat just got better.</h1>
+                        <p>A forge mod with new items, and modified behavior of current tools including combos, and animations</p>
                     </div>
-                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
+                    <img src="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2021/02/Minecraft-Combat-Tips-7.jpg?q=50&fit=crop&w=1400&dpr=1.5" alt="me">
                 </div>
                 <br>
             </div>
-
-            <div class="product" id="ihsDevTeamBot">
-                <div class="productHead">
-                    <div id="text">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="mainProductButton"><h1>IHS Dev Team Helper</h1></a>
-                        <h1>Another discord bot</h1>
-                        <p>A bot to help out with club activities.</p>
-                    </div>
-                    <img src="https://www.ithacacityschools.org/tfiles/folder117/badge_hs.png" alt="me">
-                </div>
-                <br>
-            </div>
-
 
 
 
