--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sentient Platypus</title>
+        <title>Gene W</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/indexStyles.css') }}">
@@ -50,7 +50,7 @@
             <div id="intro">
                 <div id="main">
                     <div id="text">
-                        <h1>Hi, <br> Im SentientPlatypus, <br> Developer.</h1>
+                        <h1>Hi, <br> Im Gene Wicaksono, <br> Developer.</h1>
                         <p>Full Stack Dev | Enthusiast | Visionary</p>
                     </div>
 
@@ -79,7 +79,7 @@
 
             <div id="aboutme">
                 <h1>
-                    Since the february of <span id="makeGold">2021</span>, <br> I have been a Computer Science <span id="makeGold">Enthusiast</span>.
+                    Since the february of <span id="makeGold">2021</span>, <br> I have been a computer ccience <span id="makeGold">enthusiast</span>.
                 </h1>
                 <h1>
                     I have worked on <a href="./products"><h1><span id="makeGoldandButton">several projects</span></h1></a> and have experience <span id="makeGold">collaborating</span> with fellow developers.
