--- a/code/services/templates/projects.html
+++ b/code/services/templates/projects.html
@@ -58,6 +58,32 @@
                 </p>
             </div>
             
+
+
+            <div class="product" id="bozuBot">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="http://codebozu.com" id="mainProductButton"><h1>bozu bot</h1></a>
+                        <h1>The time constraint was insane</h1>
+                        <p>My boi Rishi, CEO of codebozu hit me up one day before an event because he had over 500 people in his fellowship program, and needed a bot to handle an awards system, and sort members into groups and roles by a spreadsheet. So i did.</p>
+                    </div>
+                    <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFmTZ4t_b7H8A/company-logo_200_200/0/1639364471276?e=2159024400&v=beta&t=tf8UFG64VrtNFu7wH-mLfuZX2Re0gH7cNt-TzuirvGs" alt="me">
+                </div>
+                <br>
+            </div>
+
+            <div class="product" id="ballCatcher">
+                <div class="productHead">
+                    <div id="text">
+                        <a href="/underConstruction" id="mainProductButton"><h1>Reflex Testing game</h1></a>
+                        <h1>Aim labs but its with your camera and you dont actually learn anything</h1>
+                        <p>Using the mediapipe Hand tracking pipeline, I wrote an easy to use module and made a simple reflex game out of it. Scores are stored in a csv file.</p>
+                    </div>
+                    <img src="https://www.vhv.rs/dpng/d/259-2592088_blue-circle-png-pictures-blue-eat-circle-transparent.png" alt="me">
+                </div>
+                <br>
+            </div>
+
             <div class="product" id="airPlaneSeater">
                 <div class="productHead">
                     <div id="text">
